test commit from lena

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8" />
     <title>static-site-boilerplate index</title>
@@ -18,5 +18,6 @@
 
     <div>This is a landing page</div>
     <a href="./pages/page.html">Go to an internal page</a>
+    <p>hello test</p>
   </body>
 </html>
