--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
 
     <div>This is a landing page</div>
     <a href="./pages/page.html">Go to an internal page</a>
-    <p>hello test</p>
+    <p>hello, Arseniy</p>
   </body>
 </html>
