--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,16 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate index</title>
+    <title>Главная страница</title>
     <analytics></analytics>
   </head>
 
   <body class="index">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="images/image.png" />
-      <img src="images/image.jpg" />
-      <img src="images/image.svg" />
-    </div>
-
+    тут будет главная страница
     <div>This is a landing page</div>
     <a href="./pages/page.html">Go to an internal page</a>
     <p>hello, Arseniy</p>
+    <a href="about.html">Подробнее о проекте</a>
+    <a href="./crafts/uelen_bone_carving.html">Пример статьи о ремесле</a>
   </body>
 </html>
