--- a/src/about.html
+++ b/src/about.html
@@ -10,6 +10,6 @@
       Ремёсла России. Информационный ресурс, цель которого — популяризация
       народных ремёсел и искусств.
     </div>
-    <a href="/index.html">назад</a>
+    <a href="./">На главную</a>
   </body>
 </html>
