--- a/src/crafts/uelen_bone_carving.html
+++ b/src/crafts/uelen_bone_carving.html
@@ -6,6 +6,7 @@
   </head>
   <body class="craft">
     тут будет о чукотской резьбе по кости
-    <a href="../index.html">назад</a>
+    <a href="/src/crafts.html">Ко всем ремёслам</a>
+    <a href="../">На главную</a>
   </body>
 </html>
