--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
   </head>
 
   <body class="index">
-    тут будет главная страница
-    <div>This is a landing page</div>
-    <a href="./pages/page.html">Go to an internal page</a>
+    <div>тут будет главная страница</div>
     <p>hello, Arseniy</p>
     <a href="about.html">Подробнее о проекте</a>
-    <a href="./crafts/uelen_bone_carving.html">Пример статьи о ремесле</a>
+    <a href="crafts.html">Библиотека ремёсел</a>
+    <a href="articles.html">Cтатьи и подборки</a>
+    <a href="map.html">Карта</a>
   </body>
 </html>
