--- a/src/crafts.html
+++ b/src/crafts.html
@@ -6,5 +6,9 @@
   </head>
   <body class="crafts">
     Все ремёсла (библиотека ремёсел?)
+    <a href="/crafts/uelen_bone_carving.html"
+      >(Пример страницы)Уэленская резьба по кости</a
+    >
+    <a href="./">На главную</a>
   </body>
 </html>
