исправление перехода между страницами

--- a/src/crafts/uelen_bone_carving.html
+++ b/src/crafts/uelen_bone_carving.html
@@ -2,11 +2,11 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Уэленская резьба по кости</title>
   </head>
   <body class="craft">
     тут будет о чукотской резьбе по кости
-    <a href="/src/crafts.html">Ко всем ремёслам</a>
+    <a href="../crafts.html">Ко всем ремёслам</a>
     <a href="../">На главную</a>
   </body>
 </html>
