--- a/src/articles.html
+++ b/src/articles.html
@@ -7,7 +7,7 @@
   <body class="articles">
     Все статьи и подборки
     <a href="/articles/targaryen_and_kokoshnik.html"
-      >Пример статьи: Таргариен в кокошнике</a
+      >(Пример статьи) Таргариен в кокошнике</a
     >
     <a href="./">На главную</a>
   </body>
