мини изменения после билда

--- a/src/crafts/uelen_bone_carving.html
+++ b/src/crafts/uelen_bone_carving.html
@@ -5,7 +5,7 @@
     <title>Уэленская резьба по кости</title>
   </head>
   <body class="craft">
-    тут будет о чукотской резьбе по кости
+    тут будет об уэленской резьбе по кости
     <a href="../crafts.html">Ко всем ремёслам</a>
     <a href="../">На главную</a>
   </body>
