--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <body class="index">
     <div>тут будет главная страница</div>
     <p>hello, Arseniy</p>
+    <p>hello, Lena</p>
     <a href="about.html">Подробнее о проекте</a>
     <a href="crafts.html">Библиотека ремёсел</a>
     <a href="articles.html">Cтатьи и подборки</a>
