сплэш скрин/соцсети

--- a/src/about.html
+++ b/src/about.html
@@ -10,6 +10,9 @@
       Ремёсла России. Информационный ресурс, цель которого — популяризация
       народных ремёсел и искусств.
     </div>
-    <a href="./">На главную</a>
+    <a href="crafts.html">Библиотека ремёсел</a>
+    <a href="articles.html">Cтатьи и подборки</a>
+    <a href="map.html">Карта</a>
+    <a href="/">На главную</a>
   </body>
 </html>
