--- a/src/about.html
+++ b/src/about.html
@@ -13,6 +13,6 @@
     <a href="crafts.html">Библиотека ремёсел</a>
     <a href="articles.html">Cтатьи и подборки</a>
     <a href="map.html">Карта</a>
-    <a href="/">На главную</a>
+    <a href="./">На главную</a>
   </body>
 </html>
