--- a/src/articles.html
+++ b/src/articles.html
@@ -6,7 +6,7 @@
   </head>
   <body class="articles">
     Все статьи и подборки
-    <a href="/articles/targaryen_and_kokoshnik.html"
+    <a href="./articles/targaryen_and_kokoshnik.html"
       >(Пример статьи) Таргариен в кокошнике</a
     >
     <a href="./">На главную</a>
