перенос навигации в индекс

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,10 @@
       form.addEventListener('submit', handleSubmit)
     </script>
 
+    <a href="crafts.html">Библиотека ремёсел</a>
+    <a href="articles.html">Cтатьи и подборки</a>
+    <a href="map.html">Карта</a>
+
     <!-- <p>hello, Arseniy</p>
     <p>hello, Lena</p> -->
   </body>
