смена названия подборки

--- a/src/crafts.html
+++ b/src/crafts.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
+    <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
-    <title>Ремёсла</title>
+    <title>Библиотека ремёсел</title>
   </head>
   <body class="crafts">
-    Все ремёсла (библиотека ремёсел?)
-    <a href="./crafts/uelen_bone_carving.html"
+    Библиотека ремёсел
+    <a href="./crafts/uelen-bone-carving.html"
       >(Пример страницы) Уэленская резьба по кости</a
     >
     <a href="./">На главную</a>
