--- a/src/map.html
+++ b/src/map.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
+    <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
     <title>Карта</title>
   </head>
   <body class="map">
-    тут будет карта. будет ли????
+    тут будет карта с мэпбокс
     <a href="./">На главную</a>
   </body>
 </html>
