--- a/src/articles.html
+++ b/src/articles.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
+    <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
     <title>Статьи и подборки</title>
   </head>
   <body class="articles">
-    Все статьи и подборки
-    <a href="./articles/targaryen_and_kokoshnik.html"
-      >(Пример статьи) Таргариен в кокошнике</a
+    Статьи и подборки
+    <a href="./articles/bone-carving.html"
+      >(Пример статьи) У каких народов есть резьба по кости</a
     >
     <a href="./">На главную</a>
   </body>
