--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
+    <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
     <title>Главная страница</title>
     <analytics></analytics>
