--- a/src/about.html
+++ b/src/about.html
@@ -7,11 +7,62 @@
   </head>
 
   <body class="about">
-    <div>
-      Ремёсла России. Информационный ресурс, цель которого — популяризация
-      народных ремёсел и искусств.
+    <div class="header">
+      <h1>Ремёсла России</h1>
+      <!-- <a href="./">На главную</a> -->
+      <a class="vk" href="https://vk.com/crafts_ru" target="_blank"></a>
+      <a class="tg" href="https://t.me/crafts_ru" target="_blank"></a>
+      <a class="dzen" href="https://dzen.ru/crafts_ru" target="_blank"></a>
     </div>
 
-    <a href="./">На главную</a>
+    <section class="s1">
+      <div class="s1_1">
+        <img src="images/about/1.jpg" />
+      </div>
+      <div class="line"></div>
+      <div class="s1_2">
+        <h3>
+          Информационный ресурс, цель<br />которого — популяризация<br />народных
+          ремёсел и искусств,<br />сохранение культурного<br />и визуального
+          наследия
+        </h3>
+      </div>
+    </section>
+
+    <section class="s2">
+      <div class="s2_1">
+        <h3>Что мы узнали?</h3>
+      </div>
+
+      <div class="s2_2">
+        <div class="per1">
+          <h2>77%</h2>
+          <p>знают о дымковской<br />игрушке</p>
+        </div>
+        <div class="per3">
+          <h1>71%</h1>
+          <p>хотели бы узнать<br />о ремёслах больше</p>
+        </div>
+        <div class="per2">
+          <h2>3%</h2>
+          <p>слышали об уэленской<br />резьбе по кости</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="s3">
+      <h3>Особенности нашего ресурса</h3>
+      <p>Карта страны с местами зарождения ремёсел</p>
+      <p>Подборки материалов</p>
+      <p>Статьи о том, как ремёсла влияют на повседневность и искусство</p>
+      <p>Поиск информации по тэгам</p>
+    </section>
+
+    <!-- <section class="s4"></section> -->
+
+    <div class="footer">
+      <a href="./">К сплэш скрину</a>
+      <h4>HSE ADC 2022</h4>
+    </div>
   </body>
 </html>
