--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,8 @@
       <h4>HSE ADC 2022</h4>
     </div>
 
-    <!-- <p>hello, Arseniy</p>
-    <p>hello, Lena</p> -->
+    <!-- <p>hello Arseniy</p>
+    <p>hello Lena</p>
+    <p>hello Aiya</p> -->
   </body>
 </html>
