--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Главная страница</title>
     <analytics></analytics>
   </head>
@@ -80,7 +81,7 @@
 
     <div class="footer">
       <div class="nav">
-        <h3>Навигация</h3>
+        <h3>Навигация:</h3>
         <a href="crafts.html">Библиотека ремёсел</a>
         <a href="map.html">Карта ремёсел</a>
         <a href="articles.html">Cтатьи и подборки</a>
