--- a/src/articles.html
+++ b/src/articles.html
@@ -3,8 +3,50 @@
   <head>
     <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
-    <title>Статьи и подборки</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Статьи и подборки • Ремёсла России</title>
+    <meta name="title" content="Статьи и подборки • Ремёсла России" />
+    <meta
+      name="description"
+      content="Статьи и подборки материалов. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://russiancrafts.adc.ac/articles" />
+    <meta property="og:title" content="Статьи и подборки • Ремёсла России" />
+    <meta
+      property="og:description"
+      content="Статьи и подборки материалов. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="og:image"
+      content="https://russiancrafts.adc.ac/share/articles.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://russiancrafts.adc.ac/articles"
+    />
+    <meta
+      property="twitter:title"
+      content="Статьи и подборки • Ремёсла России"
+    />
+    <meta
+      property="twitter:description"
+      content="Статьи и подборки материалов. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="twitter:image"
+      content="https://russiancrafts.adc.ac/share/articles.png"
+    />
+
+    <analytics></analytics>
   </head>
+
   <body class="articles">
     Статьи и подборки
     <a href="./articles/bone-carving.html"
