--- a/src/crafts.html
+++ b/src/crafts.html
@@ -3,7 +3,45 @@
   <head>
     <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
-    <title>Библиотека ремёсел</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Библиотека • Ремёсла России</title>
+    <meta name="title" content="Библиотека • Ремёсла России" />
+    <meta
+      name="description"
+      content="Материалы о народных промыслах со всех уголков страны. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://russiancrafts.adc.ac/crafts" />
+    <meta property="og:title" content="Библиотека • Ремёсла России" />
+    <meta
+      property="og:description"
+      content="Материалы о народных промыслах со всех уголков страны. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="og:image"
+      content="https://russiancrafts.adc.ac/share/crafts.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://russiancrafts.adc.ac/crafts"
+    />
+    <meta property="twitter:title" content="Библиотека • Ремёсла России" />
+    <meta
+      property="twitter:description"
+      content="Материалы о народных промыслах со всех уголков страны. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="twitter:image"
+      content="https://russiancrafts.adc.ac/share/crafts.png"
+    />
+
+    <analytics></analytics>
   </head>
   <body class="crafts">
     Библиотека ремёсел
