--- a/src/crafts/uelen-bone-carving.html
+++ b/src/crafts/uelen-bone-carving.html
@@ -2,8 +2,56 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Уэленская резьба по кости</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Уэленская резьба по кости • Ремёсла России</title>
+    <meta name="title" content="Уэленская резьба по кости • Ремёсла России" />
+    <meta
+      name="description"
+      content="Материал о уэленской резьбе по кости. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://russiancrafts.adc.ac/articles/uelen-bone-carving"
+    />
+    <meta
+      property="og:title"
+      content="Уэленская резьба по кости • Ремёсла России"
+    />
+    <meta
+      property="og:description"
+      content="Материал о уэленской резьбе по кости. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="og:image"
+      content="https://russiancrafts.adc.ac/share/crafts/uelen-bone-carving.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://russiancrafts.adc.ac/crafts/uelen-bone-carving"
+    />
+    <meta
+      property="twitter:title"
+      content="Уэленская резьба по кости • Ремёсла России"
+    />
+    <meta
+      property="twitter:description"
+      content="Материал о уэленской резьбе по кости. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="twitter:image"
+      content="https://russiancrafts.adc.ac/share/crafts/uelen-bone-carving.png"
+    />
+
+    <analytics></analytics>
   </head>
+
   <body class="craft">
     тут будет об уэленской резьбе по кости
     <a href="../crafts.html">Ко всем ремёслам</a>
