--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,41 @@
   <head>
     <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
-    <title>Главная страница</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Ремёсла России</title>
+    <meta name="title" content="Ремёсла России" />
+    <meta
+      name="description"
+      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://russiancrafts.adc.ac" />
+    <meta property="og:title" content="Ремёсла России" />
+    <meta
+      property="og:description"
+      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+    <meta
+      property="og:image"
+      content="https://russiancrafts.adc.ac/share/index.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://russiancrafts.adc.ac" />
+    <meta property="twitter:title" content="Ремёсла России" />
+    <meta
+      property="twitter:description"
+      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+    <meta
+      property="twitter:image"
+      content="https://russiancrafts.adc.ac/share/index.png"
+    />
+
     <analytics></analytics>
   </head>
 
