--- a/src/map.html
+++ b/src/map.html
@@ -3,8 +3,44 @@
   <head>
     <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
-    <title>Карта</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Карта • Ремёсла России</title>
+    <meta name="title" content="Карта • Ремёсла России" />
+    <meta
+      name="description"
+      content="Карта с местами зарождения народных промыслов. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://russiancrafts.adc.ac/map" />
+    <meta property="og:title" content="Карта • Ремёсла России" />
+    <meta
+      property="og:description"
+      content="Карта с местами зарождения народных промыслов. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="og:image"
+      content="https://russiancrafts.adc.ac/share/map.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://russiancrafts.adc.ac/map" />
+    <meta property="twitter:title" content="Карта • Ремёсла России" />
+    <meta
+      property="twitter:description"
+      content="Карта с местами зарождения народных промыслов. Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="twitter:image"
+      content="https://russiancrafts.adc.ac/share/map.png"
+    />
+
+    <analytics></analytics>
   </head>
+
   <body class="map">
     тут будет карта с мэпбокс
     <a href="./">На главную</a>
