--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,42 @@
   <head>
     <link rel="icon" href="favicon.ico" />
     <meta charset="utf-8" />
-    <title>О проекте</title>
+
+    <!-- Primary Meta Tags -->
+    <title>О проекте • Ремёсла России</title>
+    <meta name="title" content="О проекте • Ремёсла России" />
+    <meta
+      name="description"
+      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://russiancrafts.adc.ac/about" />
+    <meta property="og:title" content="О проекте • Ремёсла России" />
+    <meta
+      property="og:description"
+      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="og:image"
+      content="https://russiancrafts.adc.ac/share/about.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://russiancrafts.adc.ac/about" />
+    <meta property="twitter:title" content="О проекте • Ремёсла России" />
+    <meta
+      property="twitter:description"
+      content="Рассказываем о ремёслах страны, об их истории и о том, как они влияют на нашу жизнь сегодня."
+    />
+    <meta
+      property="twitter:image"
+      content="https://russiancrafts.adc.ac/share/about.png"
+    />
+
+    <analytics></analytics>
   </head>
 
   <body class="about">
