--- a/src/index.html
+++ b/src/index.html
@@ -43,34 +43,44 @@
 
   <body class="index">
     <div class="header">
-      <a class="about" href="about.html">О проекте</a>
-
       <a class="vk" href="https://vk.com/crafts_ru" target="_blank"></a>
       <a class="tg" href="https://t.me/crafts_ru" target="_blank"></a>
       <a class="dzen" href="https://dzen.ru/crafts_ru" target="_blank"></a>
     </div>
 
     <div class="content">
-      <h1>Ремёсла России</h1>
-      <p>
-        Информационный ресурс, цель которого — популяризация народных ремёсел
-        и искусств
-      </p>
-      <h2>Узнайте первыми о запуске ресурса</h2>
+      <div class="n2"></div>
+      <div class="n1"></div>
+
+      <div class="glav">
+        <h1>Ремёсла России</h1>
+      </div>
+      <a class="aboutpr" href="about.html"> О проекте →</a>
+      <a class="len" href="lending.html"> Лендинг →</a>
+      <a class="styleg" href="#"> Стайлгайд →</a>
+      <div class="n3"></div>
+      <div class="n4"></div>
+      <div class="n5"></div>
+      <div class="rec1"></div>
+      <div class="sub"></div>
+      <h3>подписаться на наши обновления ↓</h3>
+      <h2>Узнайте первым о запуске ресурса</h2>
+      <div class="n6"></div>
+
       <!-- сборщик почт -->
       <form id="my-form" action="https://formspree.io/f/mgeqleal" method="POST">
-        <!-- <label>Ваша почта:</label> -->
         <input
           type="email"
           name="email"
           value=""
           placeholder="Ваша эл. почта"
         />
-        <!-- <label>Message:</label>
-    <input type="text" name="message" /> -->
+
+        <!-- <label></label> -->
         <button id="my-form-button">подписаться</button>
         <p id="my-form-status"></p>
       </form>
+
       <!-- Place this script at the end of the body tag -->
       <script>
         var form = document.getElementById('my-form')
@@ -113,13 +123,8 @@
     </div>
 
     <div class="footer">
-      <div class="nav">
-        <h3>Навигация:</h3>
-        <a href="crafts.html">Библиотека ремёсел</a>
-        <a href="map.html">Карта ремёсел</a>
-        <a href="articles.html">Cтатьи и подборки</a>
-      </div>
-      <h4>HSE ADC 2022</h4>
+      <h4>HSE&nbspADC</h4>
+      <h5>2022</h5>
     </div>
 
     <!-- <p>hello Arseniy</p>
