--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
       </div>
       <a class="aboutpr" href="about.html"> О проекте →</a>
       <a class="len" href="lending.html"> Лендинг →</a>
-      <a class="styleg" href="#"> Стайлгайд →</a>
+      <a class="styleg" href="styleguide.html"> Стайлгайд →</a>
       <div class="n3"></div>
       <div class="n4"></div>
       <div class="n5"></div>
