--- a/src/lending.html
+++ b/src/lending.html
@@ -45,7 +45,7 @@
     <div class="header">
       <a class="aboutpr" href="about.html"> О проекте</a>
       <a class="len" href="lending.html"> Лендинг</a>
-      <a class="styleg" href="#"> Стайлгайд</a>
+      <a class="styleg" href="styleguide.html"> Стайлгайд</a>
       <a class="vk" href="https://vk.com/crafts_ru" target="_blank"></a>
       <a class="tg" href="https://t.me/crafts_ru" target="_blank"></a>
       <a class="dzen" href="https://dzen.ru/crafts_ru" target="_blank"></a>
