--- a/src/about.html
+++ b/src/about.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Ремесла России</title>
   </head>
   <body>
@@ -9,7 +10,7 @@
       <div class="header">
         <a class="aboutpr" href="about.html"> О проекте</a>
         <a class="len" href="lending.html"> Лендинг</a>
-        <a class="styleg" href="#"> Стайлгайд</a>
+        <a class="styleg" href="styleguide.html"> Стайлгайд</a>
         <a class="vk" href="https://vk.com/crafts_ru" target="_blank"></a>
         <a class="tg" href="https://t.me/crafts_ru" target="_blank"></a>
         <a class="dzen" href="https://dzen.ru/crafts_ru" target="_blank"></a>
