--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -352,7 +352,7 @@
             занимаемого пространства.
           </p>
         </div>
-        <img src="images/styleguide/grid2.svg" />
+        <img src="images/styleguide/grid2.png" />
       </div>
 
       <div class="merch">
