--- a/src/lending.html
+++ b/src/lending.html
@@ -110,10 +110,10 @@
         <h2>контент нашего сайта</h2>
       </div>
       <div class="rec9"><h3>Уэленская резьба по кости</h3></div>
-      <img class="bone1" src="images/bone1.png" alt="" />
+      <img class="bone1" src="images/preview-lending/bone1.png" alt="" />
       <div class="rec10"><h3>У каких народов есть резьба по кости</h3></div>
-      <img class="bone2" src="images/bone2.png" alt="" />
-      <img class="map" src="images/map.png" alt="" />
+      <img class="bone2" src="images/preview-lending/bone2.png" alt="" />
+      <img class="map" src="images/preview-lending/map.png" alt="" />
       <div class="rez"><p>Уэленская резьба по кости</p></div>
       <div class="rec11">
         <!-- <p class="x">X</p> -->
