--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -43,7 +43,7 @@
 
   <body class="styleguide">
     <div class="sidebar">
-      <a class="logo" href="index.html"></a>
+      <a class="logo" href="preview.html"></a>
 
       <nav class="menu">
         <a href="#s1">О бренде</a>
