--- a/src/map.html
+++ b/src/map.html
@@ -41,8 +41,49 @@
     <analytics></analytics>
   </head>
 
-  <body class="map">
-    тут будет карта с мэпбокс
-    <a href="./">На главную</a>
+  <body>
+    <div class="O_Header">
+      <div class="M_Header">
+        <div class="A_Logo">
+          Ремёсла России
+        </div>
+        <div class="C_HeaderNav">
+          <div class="A_HeaderSections">
+            <a href="crafts.html">Библиотека</a>
+          </div>
+          <div class="A_HeaderSections">
+            <a href="map.html">Карта</a>
+          </div>
+          <div class="A_HeaderSections">
+            <a href="articles.html">Статьи и подборки</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="O_Footer">
+      <div class="M_Footer">
+        <div class="A_FooterSections">
+          <a href="#">О проекте</a>
+        </div>
+        <div class="C_FooterIconsSocialNetwork">
+          <div class="A_FooterIconSocialNetwork">
+            <a class="VK" href="https://vk.com/crafts_ru" target="_blank"></a>
+          </div>
+          <div class="A_FooterIconSocialNetwork">
+            <a class="TG" href="https://t.me/crafts_ru" target="_blank"></a>
+          </div>
+          <div class="A_FooterIconSocialNetwork">
+            <a
+              class="Dzen"
+              href="https://dzen.ru/crafts_ru"
+              target="_blank"
+            ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- тут будет карта с мэпбокс
+    <a href="./">На главную</a> -->
   </body>
 </html>
