--- a/src/articles.html
+++ b/src/articles.html
@@ -70,7 +70,7 @@
     <section class="S_ArticlesBody">
       <div class="O_ArticlesTitleFilter">
         <div class="A_SectionTitles">
-          Статьи и подборки
+          <h1>Статьи и подборки</h1>
         </div>
         <div class="M_ArticlesTagButtons">
           <a href="#"
