--- a/src/crafts.html
+++ b/src/crafts.html
@@ -66,7 +66,7 @@
     <section class="S_CraftsBody">
       <div class="O_CraftsTitleFilter">
         <div class="A_SectionTitles">
-          Библиотека ремёсел
+          <h1>Библиотека ремёсел</h1>
         </div>
         <div class="M_CraftsTagButtons">
           <a href="#"
