--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
     </div>
 
     здесь будет новая главная страница
+    <!-- test new computer -->
 
     <div class="O_Footer">
       <div class="M_Footer">
