--- a/src/crafts.html
+++ b/src/crafts.html
@@ -46,232 +46,163 @@
   <body>
     <div class="O_Header">
       <div class="M_Header">
-        <div class="A_Logo">
-          Ремёсла России
-        </div>
+        <a class="A_Logo" href="index.html">Ремёсла России</a>
         <div class="C_HeaderNav">
-          <div class="A_HeaderSections">
-            <a href="crafts.html">Библиотека</a>
-          </div>
-          <div class="A_HeaderSections">
-            <a href="map.html">Карта</a>
-          </div>
-          <div class="A_HeaderSections">
-            <a href="articles.html">Статьи и подборки</a>
-          </div>
+          <a class="A_HeaderSections" href="crafts.html">Библиотека</a>
+          <a class="A_HeaderSections" href="map.html">Карта</a>
+          <a class="A_HeaderSections" href="articles.html">Статьи и подборки</a>
         </div>
       </div>
     </div>
 
     <section class="S_CraftsBody">
       <div class="O_CraftsTitleFilter">
-        <div class="A_SectionTitles">
-          <h1>Библиотека ремёсел</h1>
-        </div>
+        <h1 class="A_SectionTitles">Библиотека ремёсел</h1>
         <div class="M_CraftsTagButtons">
-          <a href="#"
-            ><div class="A_TagButton">
-              роспись
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagButton">
-              кость
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagButton">
-              металл
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagButton">
-              резьба
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagButton">
-              дерево
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagButton">
-              текстиль
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagButton">
-              глина (керамика)
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagButton">
-              вышивка
-            </div></a
-          >
-          <a href="#"
-            ><div class="A_TagOptionsText">
-              все тэги
-            </div></a
-          >
+          <div class="A_TagButton">роспись</div>
+          <div class="A_TagButton">кость</div>
+          <div class="A_TagButton">металл</div>
+          <div class="A_TagButton">резьба</div>
+          <div class="A_TagButton">дерево</div>
+          <div class="A_TagButton">текстиль</div>
+          <div class="A_TagButton">глина (керамика)</div>
+          <div class="A_TagButton">вышивка</div>
+          <div class="A_TagOptionsText">все тэги</div>
         </div>
       </div>
+
       <div class="C_CraftsCards">
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="./crafts/uelen-bone-carving.html">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Uelen-bone-carving.png"
-                alt="Уэленская резьба по кости"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Uelen-bone-carving.png"
+              alt="Уэленская резьба по кости"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Уэленская резьба по&nbsp;кости</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Уэленская резьба по&nbsp;кости</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Gorodets-painting.png"
-                alt="Городецкая роспись"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Gorodets-painting.png"
+              alt="Городецкая роспись"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Городецкая роспись</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Городецкая роспись</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Mezen-painting.png"
-                alt="Мезенская роспись"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Mezen-painting.png"
+              alt="Мезенская роспись"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Мезенская роспись по&nbsp;дереву</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Мезенская роспись по&nbsp;дереву</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Petrovsky-toy.png"
-                alt="Петровская игрушка"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Petrovsky-toy.png"
+              alt="Петровская игрушка"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Петровская игрушка</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Петровская игрушка</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Vologda-lace.png"
-                alt="Вологодское кружево"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Vologda-lace.png"
+              alt="Вологодское кружево"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Вологодское кружево</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Вологодское кружево</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Vologda-khokhloma.png"
-                alt="Вологодская хохлома"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Vologda-khokhloma.png"
+              alt="Вологодская хохлома"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Вологодская хохлома</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Вологодская хохлома</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Rakul-painting.png"
-                alt="Ракульская роспись"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Rakul-painting.png"
+              alt="Ракульская роспись"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Ракульская роспись</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Ракульская роспись</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Volkhov-painting.png"
-                alt="Волховская роспись"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Volkhov-painting.png"
+              alt="Волховская роспись"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Волховская роспись</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Волховская роспись</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Skopinsk-ceramics.png"
-                alt="Cкопинская керамика"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Skopinsk-ceramics.png"
+              alt="Cкопинская керамика"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Cкопинская керамика</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Cкопинская керамика</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Tabasaran-carpet.png"
-                alt="Табасаранские ковры"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Tabasaran-carpet.png"
+              alt="Табасаранские ковры"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Табасаранские ковры</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Табасаранские ковры</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Filimonov-toy.png"
-                alt="Филимоновская игрушка"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Filimonov-toy.png"
+              alt="Филимоновская игрушка"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Филимоновская игрушка</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Филимоновская игрушка</p>
+        </a>
 
-        <div class="M_CraftsCard">
+        <a class="M_CraftsCard" href="#">
           <div class="A_CraftsCardPic">
-            <a href="#">
-              <img
-                src="images/crafts/Kholmogory-bone-carving.png"
-                alt="Холмогорская резная кость"
-            /></a>
+            <img
+              class="Q_CardImages"
+              src="images/crafts/Kholmogory-bone-carving.png"
+              alt="Холмогорская резная кость"
+            />
           </div>
-          <div class="A_CraftsCardTitle">
-            <a href="#">Холмогорская резная кость</a>
-          </div>
-        </div>
+          <p class="A_CraftsCardTitle">Холмогорская резная кость</p>
+        </a>
       </div>
     </section>
 
@@ -281,19 +212,21 @@
           <a href="#">О проекте</a>
         </div>
         <div class="C_FooterIconsSocialNetwork">
-          <div class="A_FooterIconSocialNetwork">
-            <a class="VK" href="https://vk.com/crafts_ru" target="_blank"></a>
-          </div>
-          <div class="A_FooterIconSocialNetwork">
-            <a class="TG" href="https://t.me/crafts_ru" target="_blank"></a>
-          </div>
-          <div class="A_FooterIconSocialNetwork">
-            <a
-              class="Dzen"
-              href="https://dzen.ru/crafts_ru"
-              target="_blank"
-            ></a>
-          </div>
+          <a
+            class="A_FooterIconSocialNetwork -VK"
+            href="https://vk.com/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork -TG"
+            href="https://t.me/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork -Dzen"
+            href="https://dzen.ru/crafts_ru"
+            target="_blank"
+          ></a>
         </div>
       </div>
     </div>
