--- a/src/index.html
+++ b/src/index.html
@@ -70,19 +70,21 @@
           <a href="#">О проекте</a>
         </div>
         <div class="C_FooterIconsSocialNetwork">
-          <div class="A_FooterIconSocialNetwork">
-            <a class="VK" href="https://vk.com/crafts_ru" target="_blank"></a>
-          </div>
-          <div class="A_FooterIconSocialNetwork">
-            <a class="TG" href="https://t.me/crafts_ru" target="_blank"></a>
-          </div>
-          <div class="A_FooterIconSocialNetwork">
-            <a
-              class="Dzen"
-              href="https://dzen.ru/crafts_ru"
-              target="_blank"
-            ></a>
-          </div>
+          <a
+            class="A_FooterIconSocialNetwork VK"
+            href="https://vk.com/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork TG"
+            href="https://t.me/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork Dzen"
+            href="https://dzen.ru/crafts_ru"
+            target="_blank"
+          ></a>
         </div>
       </div>
     </div>
