--- a/src/crafts/uelen-bone-carving.html
+++ b/src/crafts/uelen-bone-carving.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://russiancrafts.adc.ac/articles/uelen-bone-carving"
+      content="https://russiancrafts.adc.ac/crafts/uelen-bone-carving"
     />
     <meta
       property="og:title"
@@ -52,9 +52,308 @@
     <analytics></analytics>
   </head>
 
-  <body class="craft">
-    тут будет об уэленской резьбе по кости
-    <a href="../crafts.html">Ко всем ремёслам</a>
-    <a href="../">На главную</a>
+  <body>
+    <div class="O_Header">
+      <div class="M_Header">
+        <a class="A_Logo" href="/">Ремёсла России</a>
+        <div class="C_HeaderNav">
+          <a class="A_HeaderSections" href="crafts.html">Библиотека</a>
+          <a class="A_HeaderSections" href="map.html">Карта</a>
+          <a class="A_HeaderSections" href="articles.html">Статьи и подборки</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="O_CraftLead">
+      <img
+        class="Q_CraftLeadImage"
+        src="../images/craft/uelen-bone-carving/lead.png"
+        alt="Уэленская резьба по кости"
+      />
+
+      <div class="W_CraftLeadTitleDescription">
+        <div class="A_CraftLeadTitle -Uelen-bone-carving">
+          <h1 class="Q_CraftLeadTitleText">Уэленская резьба по&nbsp;кости</h1>
+        </div>
+        <div class="M_CraftLeadDescription">
+          <div class="W_CraftLeadDescriptionMap">
+            <div class="Q_Icon -Map -size48x48"></div>
+            <p class="A_CraftLeadDescriptionLocation">
+              село Уэлен, Чукотка, ДВФО
+            </p>
+          </div>
+          <div class="C_CraftLeadDescriptionTags">
+            <div class="A_TagButtonArticle">кость</div>
+            <div class="A_TagButtonArticle">резьба</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="S_CraftPage">
+      <section class="W_CraftContent -Center">
+        <div class="M_CraftAbout">
+          <h5 class="A_CraftAboutText -w580">
+            Уэленская резьба по&nbsp;кости&nbsp;&mdash; традиционный промысел
+            чукчей и&nbsp;эскимосов, возникший более трех тысяч лет назад.
+            Жители Чукотки не&nbsp;только прекрасные оленеводы и&nbsp;охотники,
+            но&nbsp;и&nbsp;талантливые мастера, которые из&nbsp;моржовых клыков,
+            используя нож и&nbsp;бормашину, вырезают фигурки животных
+            и&nbsp;многофигурные композиции.
+          </h5>
+          <img
+            class="Q_CraftAboutImage -w380"
+            src="../images/craft/uelen-bone-carving/about1.jpg"
+            alt="Уэленская резьба по кости"
+          />
+        </div>
+
+        <div class="O_CraftBlock">
+          <div class="M_CraftBodyTexts -Left200">
+            <h2 class="A_CraftBodySubtitle">Особенности</h2>
+            <p class="A_CraftBodyText -w580">
+              Чукотской гравировке свойственен повествовательный стиль:
+              художники изображают сюжеты народных сказок, этапы охоты, сцены
+              национального быта. Основные герои&nbsp;&mdash; животные.
+              В&nbsp;скульптурных группах выделяется человек, бесстрашно
+              вступающий в&nbsp;единоборство с&nbsp;могучим зверем.
+            </p>
+          </div>
+
+          <div class="C_CraftBodyImages">
+            <div class="C_CraftBodyImagesRow">
+              <img
+                class="Q_CraftBodyImage -w580 -Left100"
+                src="../images/craft/uelen-bone-carving/body-img1.jpg"
+                alt=""
+              />
+              <img
+                class="Q_CraftBodyImage -w480"
+                src="../images/craft/uelen-bone-carving/body-img2.jpg"
+                alt=""
+              />
+            </div>
+
+            <div class="C_CraftBodyImagesRow">
+              <img
+                class="Q_CraftBodyImage -w480"
+                src="../images/craft/uelen-bone-carving/body-img3.jpg"
+                alt=""
+              />
+              <img
+                class="Q_CraftBodyImage -w480"
+                src="../images/craft/uelen-bone-carving/body-img4.jpg"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="W_CraftHistorySticker">
+          <div class="O_CraftBlockHistory">
+            <div class="M_CraftBodyTexts -Left100">
+              <h2 class="A_CraftBodySubtitle">История</h2>
+              <p class="A_CraftBodyText -w580">
+                И&nbsp;чукчи, и&nbsp;эскимосы до&nbsp;конца 19&nbsp;века жили
+                изолированно от&nbsp;внешнего мира. Христианство в&nbsp;Уэлене
+                не&nbsp;привилось. Поэтому там долго верили в&nbsp;добрых
+                и&nbsp;злых духов, из&nbsp;зверей почитали касатку, ворона,
+                устраивали праздники кита и&nbsp;медведя, сохраняли свой быт
+                и&nbsp;традиции, помогавшие жить в&nbsp;гармонии с&nbsp;суровым
+                миром полночного края земли.
+              </p>
+            </div>
+            <div class="M_CraftBodyMap">
+              <img
+                class="Q_CraftBodyMapImage"
+                src="../images/craft/uelen-bone-carving/body-map.png"
+                alt=""
+              />
+              <a class="A_CraftBodyMapLocation" href="../map.html"
+                >Посмотреть на карте</a
+              >
+            </div>
+          </div>
+
+          <img
+            class="Q_CraftBodyImage -w1180"
+            src="../images/craft/uelen-bone-carving/body-img5.png"
+            alt=""
+          />
+        </div>
+      </section>
+
+      <section class="W_CraftContent -Left">
+        <div class="O_CraftBlockTechnique">
+          <div class="M_CraftBodyTexts -Left200">
+            <h2 class="A_CraftBodySubtitle">Техника</h2>
+            <p class="A_CraftBodyText -w580">
+              Основной материал&nbsp;&mdash; клык моржа, иногда зуб кашалота.
+              Верхний слой обрабатывается ножом, скребком, напильником, пока его
+              поверхность не&nbsp;станет белой и&nbsp;гладкой. Также мастера
+              украшают изделия цветной гравировкой.
+            </p>
+          </div>
+
+          <div class="W_CraftSliderNote">
+            <div class="M_CraftSlider">
+              <div class="A_CraftSliderArrows">
+                <div class="Q_Icon -ArrowLeft -size48x48"></div>
+                <div class="Q_SliderImages">
+                  <img
+                    class="Q_CraftBodyImage -w680"
+                    src="../images/craft/uelen-bone-carving/slider-img1.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="Q_Icon -ArrowRight -size48x48"></div>
+              </div>
+
+              <div class="C_IconsSliderPoint">
+                <div class="Q_Icon -Point -size6x6"></div>
+                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
+                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
+                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
+                <div class="Q_Icon -Point -size6x6 -Inactive"></div>
+              </div>
+            </div>
+
+            <div class="M_CraftBodyNote -w280">
+              <h4 class="A_CraftBodyNoteTitle">1 этап</h4>
+              <p class="A_CraftBodyText">
+                Добытый материал обрабатывается с&nbsp;помощью тут что-то
+                написано о&nbsp;поэтапной технике изготовления изделий первый
+                этап здесь
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="M_CraftBodyList">
+          <h2 class="A_CraftBodySubtitle">Где можно увидеть</h2>
+          <ul class="A_CraftBodyListItems">
+            <li class="Q_CraftBodyListItem">
+              <a href="#">Музей (с краткой информацией и ссылкой)</a>
+            </li>
+            <li class="Q_CraftBodyListItem">
+              <a href="#">Музей (с краткой информацией и ссылкой)</a>
+            </li>
+            <li class="Q_CraftBodyListItem">
+              <a href="#">Мастерская (с краткой информацией и ссылкой)</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="O_CraftBlockGallery">
+          <h2 class="A_CraftBodySubtitle -Left100">Фотогалерея</h2>
+          <div class="C_CraftBodyGallery">
+            <img
+              class="Q_CraftBodyImage -Gallery1"
+              src="../images/craft/uelen-bone-carving/gallery-img1.jpg"
+              alt="Уэленская резьба по кости"
+            />
+            <img
+              class="Q_CraftBodyImage -Gallery1"
+              src="../images/craft/uelen-bone-carving/gallery-img2.jpg"
+              alt="Уэленская резьба по кости"
+            />
+            <img
+              class="Q_CraftBodyImage -Gallery1"
+              src="../images/craft/uelen-bone-carving/gallery-img3.jpg"
+              alt="Уэленская резьба по кости"
+            />
+            <img
+              class="Q_CraftBodyImage -Gallery1"
+              src="../images/craft/uelen-bone-carving/gallery-img4.jpg"
+              alt="Уэленская резьба по кости"
+            />
+            <img
+              class="Q_CraftBodyImage -Gallery2"
+              src="../images/craft/uelen-bone-carving/gallery-img5.png"
+              alt="Уэленская резьба по кости"
+            />
+            <img
+              class="Q_CraftBodyImage -Gallery1"
+              src="../images/craft/uelen-bone-carving/gallery-img6.jpg"
+              alt="Уэленская резьба по кости"
+            />
+          </div>
+        </div>
+
+        <div class="W_CraftSeeAlso">
+          <div class="O_Teasers">
+            <h2 class="A_CraftBodySubtitle -Left100">
+              Связанные подборки и&nbsp;статьи
+            </h2>
+            <div class="C_TeaserCards">
+              <div class="M_TeaserCard">
+                <h6 class="A_TeaserCardTitle">
+                  У&nbsp;каких народов есть резьба по&nbsp;кости
+                </h6>
+              </div>
+              <div class="M_TeaserCard">
+                <h6 class="A_TeaserCardTitle">
+                  Ремесло и&nbsp;искусство за&nbsp;полярным кругом
+                </h6>
+              </div>
+              <div class="M_TeaserCard">
+                <h6 class="A_TeaserCardTitle">Подборка/статья</h6>
+              </div>
+            </div>
+          </div>
+
+          <div class="W_CraftPageEnd">
+            <div class="M_CraftEndTags">
+              <h2 class="A_CraftBodySubtitle -Padd0">Тэги:</h2>
+              <p class="A_CraftEndTagsSearch">
+                <span><a href="#">кость</a></span
+                >, <span><a href="#">резьба</a></span>
+              </p>
+            </div>
+
+            <div class="M_CraftSource">
+              <h4 class="A_CraftSourceTitle">Источники</h4>
+              <div class="C_CraftSourceLinks">
+                <a class="A_CraftSourceLink" href="#"
+                  >Ссылка на сайт с текстом</a
+                >
+                <a class="A_CraftSourceLink" href="#"
+                  >Ссылка на сайт с текстом</a
+                >
+                <a class="A_CraftSourceLink" href="#"
+                  >Ссылка на сайт с изображениями</a
+                >
+                <a class="A_CraftSourceLink" href="#">Печатное издание</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="O_Footer">
+      <div class="M_Footer">
+        <div class="A_FooterSections">
+          <a href="#">О проекте</a>
+        </div>
+        <div class="C_FooterIconsSocialNetwork">
+          <a
+            class="A_FooterIconSocialNetwork -VK"
+            href="https://vk.com/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork -TG"
+            href="https://t.me/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork -Dzen"
+            href="https://dzen.ru/crafts_ru"
+            target="_blank"
+          ></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
